# bug

./: CONVENTION.md  Cargo.toml  README.md
src/: client.rs  main.rs  server.rs
src/network/: error.rs  mod.rs  util.rs  validator.rs
src/network/message/: message_from_client.rs  message_from_server.rs  mod.rs  worm_body.rs
