[package]
name = "bug"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
thiserror = "2.0.18"
hex = "0.4"
bevy = "0.18.0"
bevy_prototype_lyon = "0.16.0"
rand = "0.9.2"
random = "0.14.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
